--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,19 +1,36 @@
-@use '@angular/material' as mat;
+//@use 'sass:map';
+@use '../../node_modules/@angular/material/core/theming/theming' as mat-theme;
 
-// Définition des palettes de couleurs
-$gxa-primary: mat.define-palette(mat.$indigo-palette);
-$gxa-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$gxa-warn: mat.define-palette(mat.$red-palette);
+// Crée les palettes
+$primary: mat-theme.define-palette(mat-theme.$blue-grey-palette);
+$accent: mat.define-palette(mat.$amber-palette, A200, A100, A400);
+$warn: mat.define-palette(mat.$red-palette);
 
-// Définition du thème
-$gxa-theme: mat.define-light-theme((
+
+// Crée un thème clair
+$theme: mat-theme.define-light-theme((
+  color: (
+    primary: $primary,
+    accent: $accent,
+    warn:$warn
+  ),
+  typography: mat-theme.define-typography-config(),
+  density: 0
+)
+);
+$gxa-dark-theme: mat-theme.define-dark-theme((
   color: (
     primary: $gxa-primary,
     accent: $gxa-accent,
-    warn: $gxa-warn,
-  ),
+    warn: $gxa-warn
+  )
 ));
 
-// Inclut le noyau de Material + tous les composants
-@include mat.core();
-@include mat.all-component-themes($gxa-theme);
+
+.dark-theme {
+  @include mat.all-component-colors($gxa-dark-theme);
+};
+
+
+@include mat-theme.all-component-themes($theme);
+
