--- a/src/app/features/cont/list/cont-list.component.html
+++ b/src/app/features/cont/list/cont-list.component.html
@@ -6,9 +6,9 @@
 
     <table mat-table [dataSource]="filtered()" class="mat-elevation-z8">
       <!-- Génération dynamique des colonnes -->
-      <ng-container *ngFor="let column of data() | fieldNames" [matColumnDef]="column">
+      <ng-container *ngFor="let column of filtered() | fieldNames" [matColumnDef]="column">
         <th mat-header-cell *matHeaderCellDef>
-          {{ tagMap[column] ?? column }}
+          {{ tagMap[column]  }}
         </th>
         <td mat-cell *matCellDef="let row">
           {{ row[column] }}
@@ -21,8 +21,8 @@
         </td>
       </ng-container>
     
-      <tr mat-header-row *matHeaderRowDef="data() | fieldNames"></tr>
-      <tr mat-row *matRowDef="let row; columns: data() | fieldNames"></tr>
+      <tr mat-header-row *matHeaderRowDef="filtered() | fieldNames"></tr>
+      <tr mat-row *matRowDef="let row; columns: filtered() | fieldNames"></tr>
     </table>
     
 
