--- a/src/app/features/tier/list/tier-list.component.html
+++ b/src/app/features/tier/list/tier-list.component.html
@@ -4,9 +4,9 @@
       <input matInput placeholder="Rechercher...">
     </mat-form-field>
     <table mat-table [dataSource]="items()" class="mat-elevation-z8">
-      <ng-container matColumnDef="id">
+      <ng-container matColumnDef="numtiers">
         <th mat-header-cell *matHeaderCellDef> ID </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.numtiers}} </td>
       </ng-container>
   
       <ng-container matColumnDef="name">
